v3.10.7 (XXXX-XX-XX)
--------------------

* ES-1566: fix an issue when trying to restrict traversals to non-existing
  collections with the `edgeCollections` traversal option.
  
  If a non-existing collection is specified in the `edgeCollections` or
  `vertexCollections` options of an AQL traversal, the query will now fail with
  a `collection or view not found` error. Also, if wrong collection types are
  used (e.g. a document collection or a view for `edgeCollections`), then an
  error is raised about an invalid collection type being used.

  This is a behavior change compared to previous versions, which ignored
  specifying non-existing vertex collections and had undefined behavior when
  specifying non-existing edge collections or using a vertex collection instead
  of an edge collection.

* Increase too short timeouts for requests made from coordinators to DB-servers
  when retrieving the number of documents or the index selectivity estimates for
  SmartGraph edge collection parts. These parts were treated like system
  collections because of their naming convention, and the requests were run with
  a timeout of only 5s.

* BTS-1315: Fixed spurious occurring failures during Foxx Application
  installation in case a Load Balancer is being used in front of the
  coordinators.

* Added startup option `--query.max-collections-per-query` to adjust the limit
  for the maximum number of collections/shards per query. The option defaults to
  `2048`, which is equivalent to the previous hardcoded value.

* Added metric "rocksdb_total_sst_files" to count the number of sst files,
  aggregated over all levels of the LSM tree.

* Add metric `arangodb_file_descriptors_current` to expose the number of file
  descriptors currently opened by the arangod process. This metric is available
  on Linux only.
  As counting the number of open file descriptors can be expensive, this metric
  is only updated in a configurable interval. The new startup option